# 3dGraphAnim

./: .gitignore  CMakeLists.txt  README.md  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  bld  conanfile.txt  shader.glsm
game/inc/: game.hpp
game/src/: game.cpp  main.cpp  tetrimino.cpp
game/tetrimino/: right_l.tet
includes/: controls.hpp  loader.hpp  object.hpp  texture.hpp  vertex.hpp  window.hpp
includes/game/: controls.hpp  game.hpp  tetrimino.hpp
includes/opengl/: loader.hpp  object.hpp  texture.hpp  vertex.hpp  window.hpp
sources/tetrimino_file/: bar.tet  cube.tet  left_l.tet  left_s.tet  right_l.tet  right_s.tet  t_tet.tet
src/: controls.cpp  loader.cpp  main.cpp  object.cpp  texture.cpp  vertex.cpp  window.cpp
src/game/: controls.cpp  game.cpp  tetrimino.cpp
src/opengl/: .#loader.cpp  loader.cpp  object.cpp  texture.cpp  vertex.cpp  window.cpp
tetrimino/: left_l.tet  left_s.tet
